[package]
name = "librtl-sdr-sys"
version = "0.1.0"
edition = "2018"
links = "librtlsdr"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"
